--- a/ProjectPresentation.ipynb
+++ b/ProjectPresentation.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "masks_list1 = [\"dataset/with_mask/000 copy 36.jpg\", \"dataset/with_mask/001 copy 2.jpg\", \"dataset/with_mask/004 copy 2.jpg\", \"dataset/with_mask/004 copy 9.jpg\"]\n",
+    "masks_list1 = [\"data/with_mask/000 copy 36.jpg\", \"data/with_mask/001 copy 2.jpg\", \"data/with_mask/004 copy 2.jpg\", \"data/with_mask/004 copy 9.jpg\"]\n",
     "for x in masks_list1:\n",
     "    image = mpimg.imread(x)\n",
     "    plt.imshow(image)\n",
@@ -166,7 +166,7 @@
     }
    ],
    "source": [
-    "masks_list2 = [\"dataset/with_mask/1-with-mask.jpg\", \"dataset/with_mask/2-with-mask.jpg\", \"dataset/with_mask/3-with-mask.jpg\", \"dataset/with_mask/5-with-mask.jpg\"]\n",
+    "masks_list2 = [\"data/with_mask/1-with-mask.jpg\", \"data/with_mask/2-with-mask.jpg\", \"data/with_mask/3-with-mask.jpg\", \"data/with_mask/5-with-mask.jpg\"]\n",
     "for x in masks_list2:\n",
     "    image = mpimg.imread(x)\n",
     "    plt.imshow(image)\n",
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "data_path='dataset'\n",
+    "data_path='data'\n",
     "categories=os.listdir(data_path)\n",
     "labels=[i for i in range(0, len(categories))]\n",
     "\n",
