--- a/ProjectPresentation.ipynb
+++ b/ProjectPresentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,11 +203,14 @@
     }
    ],
    "source": [
+    "# Create an empty dictionary to store data\n",
     "data_path='data'\n",
     "categories=os.listdir(data_path)\n",
+    "# labels: without_mask, with_mask\n",
     "labels=[i for i in range(0, len(categories))]\n",
     "\n",
-    "label_dict=dict(zip(categories,labels)) #empty dictionary\n",
+    "# Create an empty dictionary with keys = labels\n",
+    "label_dict=dict(zip(categories,labels))\n",
     "\n",
     "print(label_dict)\n",
     "print(categories)\n",
@@ -220,12 +223,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loop through the datasets, preprocess each image, \n",
+    "# and append the preprocessed image to the empty dictionary created above\n",
     "img_size=100\n",
     "data=[]\n",
     "target=[]\n",
     "\n",
     "\n",
     "for category in categories:\n",
+    "    # Construct path to each folder ('without_mask', 'with_mask')\n",
     "    folder_path=os.path.join(data_path,category)\n",
     "    img_names=os.listdir(folder_path)\n",
     "        \n",
