updated limitations in ProjectPresentation.ipynb

--- a/ProjectPresentation.ipynb
+++ b/ProjectPresentation.ipynb
@@ -564,14 +564,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. The current model is limited to classifying **static** images of people with and without masks. In reality, a face mask classifier would receive **dynamic**, **online** inputs.\n",
-    "- Future direction: Develop an algorithm that can signal whether someone is wearing a mask real time in a video. This could be done by repeatedly deploying the current algorithm on each frame of the video.\n",
+    "- The current model is limited to classifying **static** images of people with and without masks. In reality, a face mask classifier would receive **dynamic**, **online** inputs.\n",
+    "    - Future direction: Develop an algorithm that can signal whether someone is wearing a mask real time in a video. This could be done by repeatedly deploying the current algorithm on each frame of the video.\n",
     "\n",
-    "2. Currently, the model can only tell apart masks vs. without masks. But, it cannot differentiate different types of facial covering (e.g., masks, bandanas, scarves). As we know, masks are more effective in preventing the spread of COVID-19 than other types of facial coverings. \n",
-    "- Future direction: Develop a face mask **detector**, as opposed to **classifier**. This may benefit from using OpenCV.\n",
+    "- Currently, the model can only tell apart masks vs. without masks. But, it cannot differentiate different types of facial covering (e.g., masks, bandanas, scarves). As we know, masks are more effective in preventing the spread of COVID-19 than other types of facial coverings. \n",
+    "    - Future direction: Develop a face mask **detector**, as opposed to **classifier**. This may benefit from using OpenCV.\n",
     "\n",
-    "3. Some people cannot wear masks due to medical/religious reasons. \n",
-    "- Future direction: Although it would be hard to develop an algorithm that can tell if someone has a medical condition  that makes them unable to wear masks, we know that certain populations just cannot wear masks (e.g., children < 2yrs). So, it might be worthwhile to develop a face mask detector that does not display warnings when a toddler is not wearing a mask. This would involve training the algorithm to differentiate facial features on top of having masks "
+    "- Some people cannot wear masks due to medical/religious reasons. \n",
+    "    - Future direction: Although it would be hard to develop an algorithm that can tell if someone has a medical condition  that makes them unable to wear masks, we know that certain populations just cannot wear masks (e.g., children < 2yrs). So, it might be worthwhile to develop a face mask detector that does not display warnings when a toddler is not wearing a mask. This would involve training the algorithm to differentiate facial features on top of having masks or not."
    ]
   },
   {
