--- a/ProjectPresentation.ipynb
+++ b/ProjectPresentation.ipynb
@@ -584,9 +584,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PIC16B] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-PIC16B-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -598,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
