created ProjectPresentation1 to avoid validation error messages

--- a/ProjectPresentation.ipynb
+++ b/ProjectPresentation.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'np_utils' from 'tensorflow.keras.utils' (/opt/anaconda3/envs/PIC16B/lib/python3.7/site-packages/tensorflow_core/python/keras/api/_v2/keras/utils/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/4q/7pc_zl7j5sz_gs1vswxf0mvc0000gn/T/ipykernel_40329/4037813406.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnp_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'np_utils' from 'tensorflow.keras.utils' (/opt/anaconda3/envs/PIC16B/lib/python3.7/site-packages/tensorflow_core/python/keras/api/_v2/keras/utils/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "# First we need to read in the required packages\n",
     "import cv2,os\n",
     "import numpy as np\n",
-    "from keras.utils import np_utils\n",
+    "from tensorflow.keras.utils import np_utils\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models\n",
@@ -23,7 +35,7 @@
    "id": "947accb0",
    "metadata": {},
    "source": [
-    "<h1>§1. Data Visualization</h1>"
+    "# Data Visualization"
    ]
   },
   {
@@ -591,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
