--- a/ProjectPresentation1.ipynb
+++ b/ProjectPresentation1.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "696aef20",
+   "id": "3da2bd5e",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b137001f",
+   "id": "1de76b29",
    "metadata": {},
    "outputs": [
     {
@@ -305,8 +305,7 @@
     "4. two max pooling layers\n",
     "5. two dropout layers to avoid overfitting \n",
     "6. a flatten layer\n",
-    "finally two dense layers to match\n",
-    "the number of classes in the output\n",
+    "7. and finally two dense layers to match the number of classes in the output\n",
     "\"\"\"\n",
     "\n",
     "# create a preprocessing layer\n",
@@ -399,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2a18025e",
+   "id": "2adf48b7",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f7c53273",
+   "id": "088a01e1",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "68061fee",
+   "id": "a4207474",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaf5aaf4",
+   "id": "a12ddd7a",
    "metadata": {},
    "outputs": [],
    "source": []
