--- a/ProjectPresentation1.ipynb
+++ b/ProjectPresentation1.ipynb
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3c691cf5",
+   "id": "cce2064a",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25aead76",
+   "id": "a2279e25",
    "metadata": {},
    "source": [
     "#### Here are some of the examples of images of faces with masks"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f34256fb",
+   "id": "2fb00cbc",
    "metadata": {},
    "source": [
     "Now we will define a function that can be used to process our data before training our model "
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ea62f37b",
+   "id": "2f928191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13b7d2e9",
+   "id": "ada74c7f",
    "metadata": {},
    "source": [
     "Now we will preprocess the data set that we will be used to train the model"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f6446cd0",
+   "id": "09c3f68c",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd32a620",
+   "id": "552e61ae",
    "metadata": {},
    "source": [
     "Let us see what is the baseline performance "
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7db92f5",
+   "id": "c9f5af4d",
    "metadata": {},
    "source": [
     "After preprocessing out data, we need to split data into training and testing sets before buidling and training our model "
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc015893",
+   "id": "e6707950",
    "metadata": {},
    "source": [
     "<h1>§3. Data Augmentation</h1>"
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "708d9404",
+   "id": "aa347b4d",
    "metadata": {},
    "source": [
     "Since we want to add some data augmentation layers to our model, we will first experiment wil these layers. \n",
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6aa155c4",
+   "id": "b95cbe5e",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d747e4b",
+   "id": "06c3e63f",
    "metadata": {},
    "source": [
     "Then we will create a tf.keras.layers.RandomRotation() layer and make a plot of the original image and also when RandomRotation() has been applied."
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bb7a45b4",
+   "id": "5e0d647a",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00a5517a",
+   "id": "6cd875d6",
    "metadata": {},
    "source": [
     "<h1>§5. Testing Model on data sets of different racial group</h1>"
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03031191",
+   "id": "a044a660",
    "metadata": {},
    "source": [
     "* We now want to analyze whether our algorithm works as well on the faces of Black people as it does on the faces of East Asian or white people to test if our algorithm is biased  \n",
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bc9df49b",
+   "id": "79059586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "498c98a4",
+   "id": "8cee5632",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba4400e6",
+   "id": "b13e2a2a",
    "metadata": {},
    "source": [
     "#### 1. Data set containing faces of black people wearing masks and not wearing masks"
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a729eeff",
+   "id": "43ad68d6",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b2ab6b",
+   "id": "0e557a48",
    "metadata": {},
    "source": [
     "#### 2. Data set containing faces of East Asia people wearing masks and not wearing masks"
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c66a9e72",
+   "id": "8228bc3c",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d752662",
+   "id": "6eab331f",
    "metadata": {},
    "source": [
     "#### 3. Data set containing faces of White people wearing masks and not wearing masks"
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6096ea8f",
+   "id": "0672cbbb",
    "metadata": {},
    "outputs": [
     {
@@ -848,15 +848,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3254432d",
+   "id": "c419f1a3",
    "metadata": {},
    "source": [
-    "We can see that our model performs best on Asian with around 92% accuracy, and then around 84% accuracy on White people, then around 80% on Black people. Our model indeed appears to have different levels of accuracy on people with different race. One reason might causing this issue is because the percentage of training data we have for people with different race. The highest percentage of our training data is from Asian, and then the second group is White people. Looking through our training data set, we only have a limited amount of images of black. The lacking of images of black people in the data set is one limitation of our project, and we believe incorporating more data of black people probably will he"
+    "We can see that our model performs best on Asian with around 92% accuracy, and then around 84% accuracy on White people, then around 80% on Black people. Our model indeed appears to have different levels of accuracy on people with different race. One reason might causing this issue is because the percentage of training data we have for people with different race. The highest percentage of our training data is from Asian, and then the second group is White people. Looking through our training data set, we only have a limited amount of images of black. The lacking of images of black people in the data set is one limitation of our project, and we believe incorporating more data of black people probably will help relieve thsi problem. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2384f398",
+   "id": "491cb12a",
    "metadata": {},
    "source": [
     "<h1>§6. Limitations & Future Directions</h1>"
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c2476a7",
+   "id": "9bc0f3a7",
    "metadata": {},
    "source": [
     "- The current model is limited to classifying **static** images of people with and without masks. In reality, a face mask classifier would receive **dynamic**, **online** inputs.\n",
