--- a/ProjectPresentation1.ipynb
+++ b/ProjectPresentation1.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8393fbe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +26,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3da2bd5e",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +42,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db59b75a",
    "metadata": {},
    "source": [
     "# §1. Data Visualization"
@@ -52,7 +49,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f84b163",
    "metadata": {},
    "source": [
     "* Our data set consists of images of faces with masks and also images of faces without masks. For images of faces with masks, the majority of images in our old data set used to be images of simulated masked faces. To make our model more valid and convincing, we have deleted all simulated masked faces and added many more images of real faces with masks.   \n",
@@ -65,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cce2064a",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +95,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2279e25",
    "metadata": {},
    "source": [
     "#### Here are some of the examples of images of faces with masks"
@@ -109,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d1337cf8",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +137,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "947accb0",
    "metadata": {},
    "source": [
     "<h1>§2. Data Preprocessing</h1>"
@@ -152,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb00cbc",
    "metadata": {},
    "source": [
     "Now we will define a function that can be used to process our data before training our model "
@@ -160,8 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2f928191",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,6 +159,7 @@
     "    \"\"\"\n",
     "    This function will loop through the data set, preprocess each image\n",
     "    The input is the path to the data set\n",
+    "    We resize the image to a smaller size to speed up training\n",
     "    The output will be images and targets in array form\n",
     "    \"\"\"\n",
     "    # Create an empty dictionary to store data\n",
@@ -198,7 +189,7 @@
     "            img_path=os.path.join(folder_path,img_name)\n",
     "            img=cv2.imread(img_path)\n",
     "            try:                \n",
-    "                # Resizing the gray scale into 100x100, since we need a fixed common size for all the images in the dataset           \n",
+    "                # Resizing the image into 100x100         \n",
     "                resized=cv2.resize(img,(img_size,img_size))\n",
     "                # appending the image and the label(categorized) into the list (dataset)\n",
     "                data.append(resized)\n",
@@ -216,16 +207,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada74c7f",
    "metadata": {},
    "source": [
-    "Now we will preprocess the data set that we will be used to train the model"
+    "Now we will preprocess the data set that we will be used to train the model. Note that sometimes we need to manually delete the .DS_store file in the directory."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "09c3f68c",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +233,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "552e61ae",
    "metadata": {},
    "source": [
     "Let us see what is the baseline performance "
@@ -253,7 +241,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1de76b29",
    "metadata": {},
    "outputs": [
     {
@@ -274,16 +261,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9f5af4d",
    "metadata": {},
    "source": [
-    "After preprocessing out data, we need to split data into training and testing sets before buidling and training our model "
+    "After preprocessing out data, we need to split data into training and testing sets before buidling and training our model. We split with the ratio 9:1."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "32105190",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +278,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6707950",
    "metadata": {},
    "source": [
     "<h1>§3. Data Augmentation</h1>"
@@ -301,7 +285,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa347b4d",
    "metadata": {},
    "source": [
     "Since we want to add some data augmentation layers to our model, we will first experiment wil these layers. \n",
@@ -312,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b95cbe5e",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +323,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c3e63f",
    "metadata": {},
    "source": [
     "Then we will create a tf.keras.layers.RandomRotation() layer and make a plot of the original image and also when RandomRotation() has been applied."
@@ -350,7 +331,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5e0d647a",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +359,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "947accb0",
    "metadata": {},
    "source": [
     "<h1>§4. Machine Learning Model</h1>"
@@ -387,7 +366,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9074f489",
    "metadata": {},
    "source": [
     "We will create a tf.keras.Sequential model using both a preprocessor, data augmentation layers, and also some of layers that we have discussed in class"
@@ -396,7 +374,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "41b9220e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +396,7 @@
     "model = tf.keras.Sequential([\n",
     "    # preprocessing\n",
     "    preprocessor,\n",
-    "    # data augmentation\n",
+    "    # data augmentation with flip and rotation\n",
     "    layers.RandomFlip('horizontal'), \n",
     "    layers.RandomRotation(0.05),\n",
     "    # The first CNN layer is a Convolution layer of a kernel size 3*3\n",
@@ -447,7 +424,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3547c6b3",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +476,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "978366ee",
    "metadata": {},
    "source": [
     "Now we will train model and plot the history of the accuracy on both the training and validation sets. "
@@ -509,7 +484,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2adf48b7",
    "metadata": {},
    "outputs": [
     {
@@ -590,16 +564,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "566cc580",
    "metadata": {},
    "source": [
-    "We want to visualize the training history."
+    "From the output, we can see that despite that there are some fluctuations in the first few epochs, the validation accuracy of the model stabilizes to a decent leve of well above 90 percent. A visualization of the training history is as follows."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "088a01e1",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +610,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843ccb29",
    "metadata": {},
    "source": [
     "Now we would want to evaluate the accuracy of the model on the test dataset"
@@ -647,7 +618,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a4207474",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +635,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cd875d6",
    "metadata": {},
    "source": [
     "<h1>§5. Testing Model on data sets of different racial group</h1>"
@@ -673,17 +642,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a044a660",
    "metadata": {},
    "source": [
-    "* We now want to analyze whether our algorithm works as well on the faces of Black people as it does on the faces of East Asian or white people to test if our algorithm is biased  \n",
+    "* Besides examining the performance on all people comprehensively, we would also like to see if different skin colors and facial characteristics across races might affect the model's performance. We now test our model on Black, White, and Asian people separately to analyze whether our algorithm is biased.\n",
     "* We have separately prepared three data sets corresonding to black people, East Asia people, and white people. We will preprocess each data set and then test our model."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "79059586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +660,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8cee5632",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +694,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b13e2a2a",
    "metadata": {},
    "source": [
     "#### 1. Data set containing faces of black people wearing masks and not wearing masks"
@@ -737,7 +702,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "43ad68d6",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +732,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e557a48",
    "metadata": {},
    "source": [
     "#### 2. Data set containing faces of East Asia people wearing masks and not wearing masks"
@@ -777,7 +740,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8228bc3c",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +770,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eab331f",
    "metadata": {},
    "source": [
     "#### 3. Data set containing faces of White people wearing masks and not wearing masks"
@@ -817,7 +778,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0672cbbb",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +808,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c419f1a3",
    "metadata": {},
    "source": [
     "We can see that our model performs best on Asian with around 92% accuracy, and then around 84% accuracy on White people, then around 80% on Black people. Our model indeed appears to have different levels of accuracy on people with different race. One reason might causing this issue is because the percentage of training data we have for people with different race. The highest percentage of our training data is from Asian, and then the second group is White people. Looking through our training data set, we only have a limited amount of images of black. The lacking of images of black people in the data set is one limitation of our project, and we believe incorporating more data of black people probably will help relieve thsi problem. "
@@ -856,7 +815,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "491cb12a",
    "metadata": {},
    "source": [
     "<h1>§6. Limitations & Future Directions</h1>"
@@ -864,7 +822,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bc0f3a7",
    "metadata": {},
    "source": [
     "- The current model is limited to classifying **static** images of people with and without masks. In reality, a face mask classifier would receive **dynamic**, **online** inputs.\n",
@@ -880,7 +837,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -894,7 +851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
