--- a/ProjectPresentation1.ipynb
+++ b/ProjectPresentation1.ipynb
@@ -829,6 +829,9 @@
     "\n",
     "- Currently, the model can only tell apart masks vs. without masks. But, it cannot differentiate different types of facial covering (e.g., masks, bandanas, scarves). As we know, masks are more effective in preventing the spread of COVID-19 than other types of facial coverings. \n",
     "    - Future direction: Develop a face mask **detector**, as opposed to **classifier**. This may benefit from using OpenCV.\n",
+    "    \n",
+    "- Our current model is better at detecting masks in the frontal direction of the face but not as well when it faces sideways. From other models and datasets we used in training, the accuracy seems to be positively correlated with the size and clarity of the facial part in the image.\n",
+    "    - Future direction: If we had the time and bandwidth, we could try using images with better quality and resize it to a larger size. We would also like to add a greater proportion of faces facing other directions into our training set to account for more variability.\n",
     "\n",
     "- Some people cannot wear masks due to medical/religious reasons. \n",
     "    - Future direction: Although it would be hard to develop an algorithm that can tell if someone has a medical condition  that makes them unable to wear masks, we know that certain populations just cannot wear masks (e.g., children < 2yrs). So, it might be worthwhile to develop a face mask detector that does not display warnings when a toddler is not wearing a mask. This would involve training the algorithm to differentiate facial features on top of having masks or not."
